# paicc

./: LICENSE  README.md  paicc.cabal  stack-13.20.yaml  stack.yaml
app/: Main.hs
src/Tct/: Paicc.hs
src/Tct/Its/Processor/: Lare.hs  Looptree.hs
src/Tct/Paicc/: Abstraction.hs  Decomposition.hs  LoopStructure.hs  Preprocessor.hs  Problem.hs  Strategies.hs  Unfold.hs  notes.md
