name:                paicc
version:             0.1.0.0
synopsis:            Program Analysis meets Implicit Computational Complexity
-- description:
homepage:            https://github.com/ComputationWithBoundedResources/paicc#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Schaper
maintainer:          michael.schaper@uibk.ac.at
copyright:           Copyright: (c) 2018 Michael Schaper
category:            Program Analysis
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Tct.Its.Processor.Lare
    Tct.Its.Processor.Looptree
  build-depends:       base >= 4.7 && < 5, containers, tct-core, tct-common, tct-its, lare
  default-language:    Haskell2010
  ghc-options:         -Wall -O3 -fno-warn-orphans
  default-extensions:
    DataKinds
    FlexibleInstances
    TypeFamilies
    TypeOperators

executable paicc-exe
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  base, tct-core, tct-its, paicc
  ghc-options:    -Wall -fno-warn-orphans -O3 -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/ComputationWithBoundedResources/paicc

